clusters/default/kelseyschnabel-com/kelseyschnabel-com.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kelseyschnabel-com
  namespace: default
spec:
  selector:
    matchLabels:
      app: kelseyschnabel-com
  replicas: 1
  template:
    metadata:
      labels:
        app: kelseyschnabel-com
    spec:
      nodeSelector:
        kubernetes.io/hostname: slave1    
      containers:
        - image: schniebel/kelseyschnabel-com:6e5f97cb6b0266f34f13a4c0260040bc215cb67c
          name: kelseyschnabel-com
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
       - name: docker-hub

---

apiVersion: v1
kind: Service
metadata:
  name: kelseyschnabel-com-svc
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: kelseyschnabel-com
