clusters/default/kelseyschnabel-com/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kelseyschnabel-com-ingressroute
  namespace: default
spec:
  routes:
  - kind: Rule
    match: Host(`kelseyschnabel.com`)
    middlewares:
      - name: nginx-basic-auth    
    services:
    - kind: Service
      name: kelseyschnabel-com-svc
      port: 80
  #tls:
  #  secretName: kelseyschnabel-com-production-tls
